test/fail/ok/debug.tc-human.ok
error[M0050]: literal of type
  Nat
does not have expected type
  ()
    ┌─ debug.mo:1:9
  1 │  debug { 42 }; // error: result Int
    │          ^^ 
